--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <label class="font-semibold" for="">Mobile Number</label><br />
         <input
           type="text"
+          id="input-number"
           placeholder="Enter your number"
           class="input my-3 rounded-3xl bg-[#f4f5f7]"
         />
@@ -35,11 +36,16 @@
         <label class="font-semibold" for="">4 Digit Pin</label><br />
         <input
           type="text"
+          id="input-pin"
           placeholder="Enter 4 Digit Pin"
           class="input my-3 rounded-3xl bg-[#f4f5f7]"
         />
       </div>
-      <button class="btn btn-primary w-full rounded-3xl mt-2">Login</button>
+      <button class="btn btn-primary w-full rounded-3xl mt-2" id="btn-login">
+        Login
+      </button>
     </form>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
