--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     />
     <!-- tailwind cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <!-- font awesome cd -->
+    <!-- font awesome cdn -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -22,23 +22,63 @@
     />
   </head>
   <body class="bg-[#f4f5f7] h-[100vh]">
-    <nav
-      class="max-w-lg mx-auto min-h-[50px] flex justify-between items-center border-b-1 border-gray-400 p-3"
-    >
-      <div class="left-div flex">
-        <img src="./assets/Group.png" alt="" class="nav-img w-[48px]" />
-        <div class="ml-3">
-          <h1 class="font-bold">$<span>45000</span></h1>
-          <p class="text-[#08080880]">Available Balance</p>
+    <header class="max-w-lg mx-auto bg-[#ffffff] rounded-b-xl">
+      <!-- nav bar starts here -->
+      <nav
+        class="min-h-[50px] flex justify-between items-center border-b border-gray-300 p-3"
+      >
+        <div class="left-div flex">
+          <img src="./assets/Group.png" alt="" class="nav-img w-[48px]" />
+          <div class="ml-3">
+            <h1 class="font-bold">$<span>45000</span></h1>
+            <p class="text-[#08080880]">Available Balance</p>
+          </div>
         </div>
+
+        <div class="right-div">
+          <button class="btn text-[#08080880]">
+            <i class="fa-solid fa-arrow-right-to-bracket text-gray-600"></i> Log
+            Out
+          </button>
+        </div>
+      </nav>
+
+      <!-- welcome -->
+      <div class="p-3">
+        <h2 class="font-bold text-2xl">🔥Welcome to Payooo!</h2>
+        <p class="text-[#08080880]">
+          Enjoy easy and convenient financial services with us. Cashout charge
+          is low and
+        </p>
       </div>
 
-      <div class="right-div">
-        <button class="btn text-[#08080880]">
-          <i class="fa-solid fa-arrow-right-to-bracket text-gray-600"></i> Log
-          Out
-        </button>
+      <!-- card button container -->
+      <div class="min-h-[200px] grid grid-cols-3 gap-3 p-3">
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/wallet1.png" alt="" class="mx-auto" />
+          <p class="text-center">Add Money</p>
+        </div>
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/send1.png" alt="" class="mx-auto" />
+          <p class="text-center">Cashout</p>
+        </div>
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/money1.png" alt="" class="mx-auto" />
+          <p class="text-center">Transfer Money</p>
+        </div>
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/bonus1.png" alt="" class="mx-auto" />
+          <p class="text-center">Get Bonus</p>
+        </div>
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/purse1.png" alt="" class="mx-auto" />
+          <p class="text-center">Pay Bill</p>
+        </div>
+        <div class="border-2 border-gray-300 p-3 rounded-xl">
+          <img src="./assets/transaction1.png" alt="" class="mx-auto" />
+          <p class="text-center">Transactions</p>
+        </div>
       </div>
-    </nav>
+    </header>
   </body>
 </html>
