modified form section

--- a/home.html
+++ b/home.html
@@ -81,11 +81,9 @@
       </div>
     </header>
 
-    <section
-      class="home-form-section border-2 border-green-400 max-w-lg mx-auto mt-6"
-    >
+    <section class="home-form-section max-w-lg mx-auto mt-6">
       <h1 class="font-bold mb-2">Add Money</h1>
-      <form class="bg-white p-7 rounded-2xl border-2 border-blue-400">
+      <form class="bg-white p-7 rounded-2xl">
         <div>
           <h2 class="font-semibold">Select A Book</h2>
           <select class="select my-2 rounded-3xl bg-[#f4f5f7] w-full">
