--- a/home.html
+++ b/home.html
@@ -30,7 +30,9 @@
         <div class="left-div flex">
           <img src="./assets/Group.png" alt="" class="nav-img w-[48px]" />
           <div class="ml-3">
-            <h1 class="font-bold">$<span>45000</span></h1>
+            <h1 class="font-bold">
+              $<span id="available-balance">45000</span>
+            </h1>
             <p class="text-[#08080880]">Available Balance</p>
           </div>
         </div>
@@ -60,7 +62,7 @@
         </div>
         <div class="border-2 border-gray-300 p-3 rounded-xl">
           <img src="./assets/send1.png" alt="" class="mx-auto" />
-          <p class="text-center">Cashout</p>
+          <p class="text-center">Cash Out</p>
         </div>
         <div class="border-2 border-gray-300 p-3 rounded-xl">
           <img src="./assets/money1.png" alt="" class="mx-auto" />
@@ -86,7 +88,10 @@
       <form class="bg-white p-7 rounded-2xl">
         <div>
           <h2 class="font-semibold">Select A Book</h2>
-          <select class="select my-2 rounded-3xl bg-[#f4f5f7] w-full">
+          <select
+            id="bank-name"
+            class="select my-2 rounded-3xl bg-[#f4f5f7] w-full"
+          >
             <option>Select Bank</option>
             <option>ONE BANK</option>
             <option>BRAC BANK</option>
@@ -97,6 +102,7 @@
         <div>
           <label class="font-semibold" for="">Bank Account Number</label><br />
           <input
+            id="account-number"
             type="text"
             placeholder="Enter 11 digit account number"
             class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
@@ -105,6 +111,7 @@
         <div>
           <label class="font-semibold" for="">Amount to Add</label><br />
           <input
+            id="add-money"
             type="text"
             placeholder="Add Amount to withdraw"
             class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
@@ -113,15 +120,21 @@
         <div>
           <label class="font-semibold" for="">Pin Number</label><br />
           <input
+            id="add-pin"
             type="text"
             placeholder="Enter 4 digit pin number"
             class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
           />
         </div>
-        <button class="btn btn-primary w-full rounded-3xl mt-2" id="">
+        <button
+          class="btn btn-primary w-full rounded-3xl mt-2"
+          id="btn-add-money"
+        >
           Add Money
         </button>
       </form>
     </section>
+
+    <script src="./js/home.js"></script>
   </body>
 </html>
