--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
 
         <div class="right-div">
           <button class="btn text-[#08080880]">
-            <i class="fa-solid fa-arrow-right-to-bracket text-gray-600"></i> Log
-            Out
+            <i class="fa-solid fa-arrow-right-to-bracket text-gray-600"></i>
+            Log Out
           </button>
         </div>
       </nav>
@@ -56,11 +56,17 @@
 
       <!-- card button container -->
       <div class="min-h-[200px] grid grid-cols-3 gap-3 p-3">
-        <div class="border-2 border-gray-300 p-3 rounded-xl">
+        <div
+          id="add-money-card-btn"
+          class="border-2 border-gray-300 p-3 rounded-xl"
+        >
           <img src="./assets/wallet1.png" alt="" class="mx-auto" />
           <p class="text-center">Add Money</p>
         </div>
-        <div class="border-2 border-gray-300 p-3 rounded-xl">
+        <div
+          id="cashout-money-card-btn"
+          class="border-2 border-gray-300 p-3 rounded-xl"
+        >
           <img src="./assets/send1.png" alt="" class="mx-auto" />
           <p class="text-center">Cash Out</p>
         </div>
@@ -83,56 +89,99 @@
       </div>
     </header>
 
-    <section class="home-form-section max-w-lg mx-auto mt-6">
-      <h1 class="font-bold mb-2">Add Money</h1>
-      <form class="bg-white p-7 rounded-2xl">
-        <div>
-          <h2 class="font-semibold">Select A Book</h2>
-          <select
-            id="bank-name"
-            class="select my-2 rounded-3xl bg-[#f4f5f7] w-full"
-          >
-            <option>Select Bank</option>
-            <option>ONE BANK</option>
-            <option>BRAC BANK</option>
-            <option>ASIAN BANK</option>
-          </select>
-        </div>
+    <section class="home-form-section max-w-lg mx-auto mt-6 bg-[#f4f5f7]">
+      <!-- add money form -->
+      <div id="add-money-form">
+        <h1 class="font-bold mb-2">Add Money</h1>
+        <form class="bg-white p-7 rounded-2xl">
+          <div>
+            <h2 class="font-semibold">Select A Bank</h2>
+            <select
+              id="bank-name"
+              class="select my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            >
+              <option>Select Bank</option>
+              <option>ONE BANK</option>
+              <option>BRAC BANK</option>
+              <option>ASIAN BANK</option>
+            </select>
+          </div>
 
-        <div>
-          <label class="font-semibold" for="">Bank Account Number</label><br />
-          <input
-            id="account-number"
-            type="text"
-            placeholder="Enter 11 digit account number"
-            class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
-          />
-        </div>
-        <div>
-          <label class="font-semibold" for="">Amount to Add</label><br />
-          <input
-            id="add-money"
-            type="text"
-            placeholder="Add Amount to withdraw"
-            class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
-          />
-        </div>
-        <div>
-          <label class="font-semibold" for="">Pin Number</label><br />
-          <input
-            id="add-pin"
-            type="text"
-            placeholder="Enter 4 digit pin number"
-            class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
-          />
-        </div>
-        <button
-          class="btn btn-primary w-full rounded-3xl mt-2"
-          id="btn-add-money"
-        >
-          Add Money
-        </button>
-      </form>
+          <div>
+            <label class="font-semibold" for="">Bank Account Number</label
+            ><br />
+            <input
+              id="account-number"
+              type="text"
+              placeholder="Enter 11 digit account number"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <div>
+            <label class="font-semibold" for="">Amount to Add</label><br />
+            <input
+              id="add-money"
+              type="text"
+              placeholder="Add Amount to withdraw"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <div>
+            <label class="font-semibold" for="">Pin Number</label><br />
+            <input
+              id="add-pin"
+              type="text"
+              placeholder="Enter 4 digit pin number"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <button
+            class="btn btn-primary w-full rounded-3xl mt-2"
+            id="btn-add-money"
+          >
+            Add Money
+          </button>
+        </form>
+      </div>
+
+      <div id="cash-out-form" class="hidden">
+        <h1 class="font-bold mb-2">Cash Out</h1>
+        <form class="bg-white p-7 rounded-2xl">
+          <div>
+            <label class="font-semibold" for="">Agent Number</label><br />
+            <input
+              id="agent-number"
+              type="text"
+              placeholder="Enter 11 digit number"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <div>
+            <label class="font-semibold" for="">Amount</label><br />
+            <input
+              id="withdraw-amount"
+              type="text"
+              placeholder="Enter amount to withdraw"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <div>
+            <label class="font-semibold" for="">Pin Number</label><br />
+            <input
+              id="pin"
+              type="text"
+              placeholder="Enter 4 digit pin number"
+              class="input my-2 rounded-3xl bg-[#f4f5f7] w-full"
+            />
+          </div>
+          <button
+            class="btn btn-primary w-full rounded-3xl mt-2"
+            id="btn-withdraw"
+          >
+            Withdraw Money
+          </button>
+        </form>
+      </div>
     </section>
 
     <script src="./js/home.js"></script>
