--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Payoo For Mobile</title>
-    <!-- daisy ui cdn -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@5"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <!-- tailwind cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  </head>
-  <body
-    class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center"
-  >
-    <div
-      class="w-[300px] h-[130px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center"
-    >
-      <img src="./assets/Group.png" alt="" />
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Payoo For Mobile</title>
+		<!-- daisy ui cdn -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/daisyui@5"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<!-- tailwind cdn -->
+		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+	</head>
+	<body
+		class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center"
+	>
+		<div
+			class="w-[300px] h-[130px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center"
+		>
+			<img src="./assets/Group.png" alt="" />
+		</div>
 
-    <form class="p-7 bg-white rounded-2xl w-[350px]">
-      <div class="">
-        <label class="font-semibold" for="">Mobile Number</label><br />
-        <input
-          type="text"
-          id="input-number"
-          placeholder="Enter your number"
-          class="input my-3 rounded-3xl bg-[#f4f5f7]"
-        />
-      </div>
-      <div>
-        <label class="font-semibold" for="">4 Digit Pin</label><br />
-        <input
-          type="text"
-          id="input-pin"
-          placeholder="Enter 4 Digit Pin"
-          class="input my-3 rounded-3xl bg-[#f4f5f7]"
-        />
-      </div>
-      <button class="btn btn-primary w-full rounded-3xl mt-2" id="btn-login">
-        Login
-      </button>
-    </form>
+		<form class="p-7 bg-white rounded-2xl w-[350px]">
+			<div class="">
+				<label class="font-semibold" for="">Mobile Number</label><br />
+				<input
+					type="text"
+					id="input-number"
+					placeholder="Enter your number"
+					class="input my-3 rounded-3xl bg-[#f4f5f7]"
+				/>
+			</div>
+			<div>
+				<label class="font-semibold" for="">4 Digit Pin</label><br />
+				<input
+					type="text"
+					id="input-pin"
+					placeholder="Enter 4 Digit Pin"
+					class="input my-3 rounded-3xl bg-[#f4f5f7]"
+				/>
+			</div>
+			<button
+				class="btn btn-primary w-full rounded-3xl mt-2"
+				id="btn-login"
+			>
+				Login
+			</button>
+		</form>
 
-    <script src="./js/script.js"></script>
-  </body>
+		<script src="./js/script.js"></script>
+	</body>
 </html>
